software-center (2.1.3) UNRELEASED; urgency=low

  * softwarecenter/view/appview.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py:
    - fix visual glitch when updating a list view that contains
      a large number of items (LP: #592296)

 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 10 Jun 2010 11:25:22 -0400

software-center (2.1.2) maverick; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/viewswitcher.py:
    - only reselect a channel node when a model is available
      (LP: #578497)
  * fix "List view forgets selected row" regression (LP: #584969)
  * softwarecenter/view/availablepane.py:
    - fix broken searches
  * data/ui/SoftwareCenter.ui,
    softwarecenter/app.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/navhistory.py:
    - bit of navhistory code housekeeping
    - add navhistory back/forward actions and corresponding
      menu items
    - integrate navhistory actions with custom back/forward
      buttons
    - add accelerator keys for navhistory actions
  * merged lp:~osomon/software-center/memory_leak, fixes
    memory leak regression (LP: #577540), thanks Olivier Tilloy!
  * softwarecenter/backend/aptd.py:
    - fix error when updating software sources (LP: #586623)
  * merged lp:~osomon/software-center/memory_leak, disconnect
    signals to allow appstore to be deleted, thanks Olivier Tilloy!
  * merged lp:~osomon/software-center/fix_appstore_update, remake
    pkgname_index_map correctly, many thanks Olivier!
  * softwarecenter/view/historypane.py:
    - fix UnboundLocalError if history.log is empty
  * merged lp:~hellium/software-center/installed-date, history
    pane log parsing merged to AptHistory, implement "Installed since"
    feature in the details view, many thanks Geliy Sokolov!
  * softwarecenter/apt/apthistory.py,
    softwarecenter/view/historypane.py:
    - fix launch error in the case where there is no
      history.log file (LP: #591590)
  