@@ -1,6 +1,7 @@
 [type: python] software-center
 [type. python] utils/update-software-center
 [type: gettext/glade] data/ui/SoftwareCenter.ui
+[type: gettext/glade] data/ui/login.ui
 data/ubuntu-software-center.desktop.in
 data/unbranded-software-center.desktop.in
 [type: gettext/xml] data/software-center.menu.in
@@ -20,7 +21,8 @@ softwarecenter/view/__init__.py
 softwarecenter/view/appdetailsview.py
 softwarecenter/view/appview.py
 softwarecenter/view/availablepane.py
-softwarecenter/view/catview.py
+softwarecenter/view/catview_webkit.py
+softwarecenter/view/catview_gtk.py
 softwarecenter/view/dialogs.py
 softwarecenter/view/installed_view.py
 softwarecenter/view/installedpane.py
@@ -28,5 +30,7 @@ softwarecenter/view/pendingview.py
 softwarecenter/view/softwarepane.py
 softwarecenter/view/channelpane.py
 softwarecenter/view/viewswitcher.py
+softwarecenter/view/login.py
 softwarecenter/view/widgets/backforward.py
 softwarecenter/view/widgets/pathbar_gtk_atk.py
+softwarecenter/view/widgets/searchentry.py
