@@ -5,8 +5,10 @@ software-center (2.1.3) UNRELEASED; urgency=low
     softwarecenter/view/channelpane.py:
     - fix visual glitch when updating a list view that contains
       a large number of items (LP: #592296)
+  * po/POTFILES.in:
+    - update to current set of modules
 
- -- Gary Lasker <gary.lasker@canonical.com>  Thu, 10 Jun 2010 11:25:22 -0400
+ -- Gary Lasker <gary.lasker@canonical.com>  Thu, 10 Jun 2010 18:09:44 -0400
 
 software-center (2.1.2) maverick; urgency=low
 
